Add feedback link to index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>Welcome to my app</h1>
     <h1>New sentence in new branch</h1>
+    <a href="feedback.html">Feedback Page </a>
 </body>
 
 </html>
